--- a/app/src/main/res/layout/fragment_transportation.xml
+++ b/app/src/main/res/layout/fragment_transportation.xml
@@ -9,6 +9,11 @@
     android:layout_height="match_parent"
     tools:context=".TransportationFragment">
 
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
