위도, 경도 텍스트뷰 삭제!

--- a/app/src/main/res/layout/fragment_transportation.xml
+++ b/app/src/main/res/layout/fragment_transportation.xml
@@ -1,64 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="16dp"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".TransportationFragment">
 
     <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:id="@+id/map"
-        tools:context=".TransportationFragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
-
-
-<!--    <com.google.android.gms.maps.MapView-->
-<!--        android:id="@+id/map"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="300dp" />-->
+        tools:context=".TransportationFragment" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/bt_location"
-        android:text="Get Location"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Latitude"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@color/teal_200"
-        android:layout_marginTop="16dp"/>
+        android:text="Get Location" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_latitude"
-        android:text="0.0"
-        android:textSize="24sp"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:text="@string/latitude"-->
+<!--        android:textColor="@color/teal_200"-->
+<!--        android:textSize="32sp"-->
+<!--        android:textStyle="bold" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Longitude"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@color/teal_200"
-        android:layout_marginTop="16dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/tv_latitude"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="0.0"-->
+<!--        android:textSize="24sp" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_longitude"
-        android:text="0.0"
-        android:textSize="24sp"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:text="@string/longitude"-->
+<!--        android:textColor="@color/teal_200"-->
+<!--        android:textSize="32sp"-->
+<!--        android:textStyle="bold" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tv_longitude"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="0.0"-->
+<!--        android:textSize="24sp" />-->
 
 </LinearLayout>
 
