--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabBackground="@drawable/tab_selector">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/foodTab1"
