add description to RecyclerItem.java

--- a/app/src/main/res/layout/fragment_card_view_item.xml
+++ b/app/src/main/res/layout/fragment_card_view_item.xml
@@ -1,27 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".CardViewItemFragment">-->
-
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CardViewItemFragment">
-
-
-<!--    <FrameLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +32,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/introTv"
+            android:id="@+id/descriptionTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -67,6 +50,7 @@
             android:layout_height="300dp"
             android:layout_gravity="fill_vertical"
             tools:context=".CardViewItemFragment" />
+
     </LinearLayout>
-<!--    </FrameLayout>-->
+
 </ScrollView>
