--- a/app/src/main/res/layout/fragment_card_view_item.xml
+++ b/app/src/main/res/layout/fragment_card_view_item.xml
@@ -8,40 +8,49 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/nameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_marginBottom="10dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/introIv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_help"
             android:adjustViewBounds="true"
-            android:contentDescription="TODO" />
+            android:contentDescription="TODO"
+            android:src="@android:drawable/ic_menu_help" />
 
-        <TextView
-            android:id="@+id/categoryTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/categoryTv"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="TextView" />-->
 
         <TextView
             android:id="@+id/descriptionTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/addressTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_marginBottom="10dp"
+
+            android:text="TextView"
+            android:textColor="@color/primary_variant_color" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/itemMap"
