--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,31 +42,44 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="370dp"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/transMap"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="5dp"
-        android:gravity="center_horizontal"
-        app:cardCornerRadius="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/indicator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.904">
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
-        <TextView
-            android:id="@+id/cardview_textview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:lineSpacingExtra="10sp"
-            android:text="@string/home_cardview_text"
-            android:textAlignment="viewStart"
-            android:textSize="16sp" />
 
-    </androidx.cardview.widget.CardView>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="409dp"-->
+    <!--        android:layout_height="365dp"-->
+    <!--        android:orientation="vertical"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="1.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintVertical_bias="1.0">-->
+
+    <!--        <androidx.fragment.app.FragmentContainerView-->
+    <!--            android:id="@+id/transMap"-->
+    <!--            android:name="com.google.android.gms.maps.SupportMapFragment"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="300dp"/>-->
+
+    <!--    </LinearLayout>-->
