Home toolbar doing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="logo_bg">#F0F0F0</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -9,8 +10,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_orange">#FFC107</color>
     <color name="dark_orange">#FF9800</color>
-    <color name="primary_color">#D5205D</color>
-    <color name="primary_variant_color">#780028</color>
+    <color name="primary_color">#006D9F</color>
+    <color name="primary_variant_color">#00293C</color>
     <color name="unselected_tab">#EBEBEB</color>
     <color name="selected_tab">#FFEEB8</color>
 </resources>
