--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".FoodFragment">
 
+
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/purple_200"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:title="@string/app_name"-->
+<!--        app:titleTextColor="@color/white">-->
+
+<!--    </androidx.appcompat.widget.Toolbar>-->
+
+
+
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/food_tab_layout"
         android:layout_width="match_parent"
