--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -2,25 +2,52 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/item1"
-        android:enabled="true"
-        android:title="ActionBarMenu1"
-        android:icon="@drawable/bottom_bar_icon_menu"
-        app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/item2"
+        android:id="@+id/search"
         android:enabled="true"
-        android:icon="@drawable/bottom_bar_icon_menu"
-        android:title="ActionBarMenu2"
-        app:showAsAction="always"/>
-
+        android:icon="@drawable/action_bar_search"
+        android:title="ActionBarSearch"
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
     <item
-        android:id="@+id/item3"
+        android:id="@+id/setting"
         android:enabled="true"
-        android:icon="@drawable/bottom_bar_icon_menu"
-        android:title="ActionBarMenu3"
+        android:icon="@drawable/action_bar_setting"
+        android:title="ActionBarSetting"
         app:showAsAction="always"/>
+    <item android:id="@+id/search_item"
+        android:title="TODO" />
+    <item android:id="@+id/upload_item"
+        android:title="Upload" />
+    <item android:id="@+id/copy_item"
+        android:title="Copy" />
+    <item android:id="@+id/print_item"
+        android:title="Print" />
+    <item android:id="@+id/share_item"
+        android:title="Share"/>
+
+
+
+<!--    <item-->
+<!--        android:id="@+id/item1"-->
+<!--        android:enabled="true"-->
+<!--        android:title="ActionBarMenu1"-->
+<!--        android:icon="@drawable/bottom_bar_icon_menu"-->
+<!--        app:showAsAction="ifRoom"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/item2"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/bottom_bar_icon_menu"-->
+<!--        android:title="ActionBarMenu2"-->
+<!--        app:showAsAction="always"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/item3"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/bottom_bar_icon_menu"-->
+<!--        android:title="ActionBarMenu3"-->
+<!--        app:showAsAction="always"/>-->
 
 </menu>
