layout file name change

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -4,27 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoodFragment">
-
-
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/purple_200"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:title="@string/app_name"-->
-<!--        app:titleTextColor="@color/white">-->
-
-<!--    </androidx.appcompat.widget.Toolbar>-->
-
-
-
+    tools:context=".MenuFragment">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/food_tab_layout"
+        android:id="@+id/entertainment_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,19 +16,19 @@
         app:tabBackground="@drawable/tab_selector">
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/foodTab1"
+            android:id="@+id/entertainmentTab1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/foodTab2"
+            android:id="@+id/entertainmentTab2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/foodTab3"
+            android:id="@+id/entertainmentTab3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -53,12 +36,12 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/foodTabViewpager"
+        android:id="@+id/entertainmentTabViewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/food_tab_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/entertainment_tab_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
