--- a/app/src/main/res/layout/fragment_menu_tab3.xml
+++ b/app/src/main/res/layout/fragment_menu_tab3.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Food_Tab2Fragment">
+    tools:context=".Menu_Tab3Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:scrollbars="vertical"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
