layout login page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="dark_orange">#FF9800</color>
     <color name="primary_color">#006D9F</color>
     <color name="primary_variant_color">#00293C</color>
-    <color name="unselected_tab">#EBEBEB</color>
-    <color name="selected_tab">#FFEEB8</color>
+    <color name="unselected_tab">#E6FCFF</color>
+    <color name="selected_tab">#A6F6FF</color>
 </resources>
