--- a/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
+++ b/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
@@ -3,21 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context=".Account.Account_AfterLoginFragment">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/nameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="17dp" />
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:textColor="#343434"
-        android:textSize="14dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:text="ffgfg"
+        android:textSize="17dp"
+        android:textStyle="bold" />
+
 
     <Button
         android:id="@+id/btnBack"
@@ -28,7 +26,7 @@
         android:text="Back" />
 
 
-    </FrameLayout>
+</FrameLayout>
 
 
 
