--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,7 +7,7 @@
     tools:context=".Menu.MenuFragment">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/entertainment_tab_layout"
+        android:id="@+id/menu_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,12 +36,15 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/entertainmentTabViewpager"
+        android:id="@+id/menuTabViewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/entertainment_tab_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/menu_tab_layout" >
+
+
+    </androidx.viewpager2.widget.ViewPager2>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
