--- a/app/src/main/res/layout/fragment_account_tab2_register.xml
+++ b/app/src/main/res/layout/fragment_account_tab2_register.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Account.Account_RegisterFragment">
+    tools:context=".View.Account.Account_RegisterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
