--- a/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
+++ b/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center"
-    tools:context=".Account.Account_AfterLoginFragment">
+    tools:context=".View.Account.Account_AfterLoginFragment">
 
     <TextView
         android:id="@+id/nameTv"
