--- a/app/src/main/res/layout/fragment_menu_tab1.xml
+++ b/app/src/main/res/layout/fragment_menu_tab1.xml
@@ -3,11 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu.Menu_Tab1Fragment">
+    tools:context=".View.Menu.Menu_Tab1Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:scrollbars="vertical"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+
 </FrameLayout>
