--- a/app/src/main/res/layout/fragment_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_menu_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuDetailFragment">
+    tools:context=".View.Menu.MenuDetailFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,6 +22,13 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/priceTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="Price" />
+
         <ImageView
             android:id="@+id/introIv"
             android:layout_width="match_parent"
@@ -37,14 +44,7 @@
             android:layout_marginBottom="20dp"
             android:text="TextView" />
 
-        <TextView
-            android:id="@+id/addressTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
 
-            android:text="TextView"
-            android:textColor="@color/primary_variant_color" />
 
 
     </LinearLayout>
